# RLOP

./: .gitattributes  .gitignore  README.md  env.yml  main.py  pyproject.toml  sync-list.txt
BTC_09NOV25_v3/: daily_ivrmse.csv  daily_log.txt  equal_day_mean.csv  pooled.csv  predicted_prices_wide.csv  run_config.txt  summary_res.pkl  table_ivrmse_equal.md  table_ivrmse_pooled.csv
BTC_09NOV25_v3_rlopnew/: daily_ivrmse.csv  daily_log.txt  equal_day_mean.csv  pooled.csv  run_config.txt  table_ivrmse_equal.csv  table_ivrmse_pooled.md
SPY_20Q1_baseline_v3/: SPY_20Q1_hedging_RMSE_hedge.csv  SPY_20Q1_hedging_avg_cost.csv  SPY_20Q1_hedging_shortfall_prob.csv  daily_ivrmse.csv  daily_log.txt  equal_day_mean.csv  pooled.csv  predicted_prices_wide.csv  run_config.txt  summary_res.pkl  table_ivrmse_equal.csv  table_ivrmse_equal.md  table_ivrmse_pooled.csv  table_ivrmse_pooled.md
SPY_25Q2_baseline_v3/: SPY_25Q2_hedging_RMSE_hedge.csv  SPY_25Q2_hedging_avg_cost.csv  SPY_25Q2_hedging_shortfall_prob.csv  daily_ivrmse.csv  daily_log.txt  equal_day_mean.csv  pooled.csv  predicted_prices_wide.csv  run_config.txt  summary_res.pkl  table_ivrmse_equal.csv  table_ivrmse_equal.md  table_ivrmse_pooled.csv  table_ivrmse_pooled.md
XOP_20Q1_baseline_v3/: XOP_20Q1_hedging_RMSE_hedge.csv  XOP_20Q1_hedging_avg_cost.csv  XOP_20Q1_hedging_shortfall_prob.csv  daily_ivrmse.csv  daily_log.txt  equal_day_mean.csv  pooled.csv  predicted_prices_wide.csv  run_config.txt  summary_res.pkl  table_ivrmse_equal.csv  table_ivrmse_equal.md  table_ivrmse_pooled.csv  table_ivrmse_pooled.md
qlbs/: __init__.py  (+9 more)
(+165 files in other folders)
